# QCrashHandler

./: .gitignore  .gitmodules  LICENSE  README.md
doc/: WIKI.md
src/: CMakeLists.txt  QCrashHandler  qcrashdumper  qcrashhandler.cpp  qcrashhandler.h  qcrashhandler.pri  qpostprocess.pri  qpreprocess.pri
test/: main.cpp  test.pro
